logs/stomp_moveit/build.make.010.log.stderr
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_planner.cpp: In member function ‘virtual bool stomp_moveit::StompPlanner::solve(planning_interface::MotionPlanDetailedResponse&)’:
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_planner.cpp:298:29: error: ‘trajectory_msgs::JointTrajectory {aka struct trajectory_msgs::JointTrajectory_<std::allocator<void> >}’ has no member named ‘size’
   for (int i=0;i<trajectory.size();i++)
                             ^~~~
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_planner.cpp:300:28: error: ‘duration_f’ is not a member of ‘stomp_moveit::StompOptimizationTask’
     StompOptimizationTask::duration_f<<trajectory.points[i].duration<<" ";
                            ^~~~~~~~~~
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_planner.cpp:300:61: error: ‘__gnu_cxx::__alloc_traits<std::allocator<trajectory_msgs::JointTrajectoryPoint_<std::allocator<void> > > >::value_type {aka struct trajectory_msgs::JointTrajectoryPoint_<std::allocator<void> >}’ has no member named ‘duration’
     StompOptimizationTask::duration_f<<trajectory.points[i].duration<<" ";
                                                             ^~~~~~~~
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_planner.cpp:301:28: error: ‘traj_f’ is not a member of ‘stomp_moveit::StompOptimizationTask’
     StompOptimizationTask::traj_f<<trajectory.points[i].positions<<" ";
                            ^~~~~~
make[2]: *** [CMakeFiles/stomp_moveit.dir/src/stomp_planner.cpp.o] Error 1
make[1]: *** [CMakeFiles/stomp_moveit.dir/all] Error 2
make: *** [all] Error 2
